--- a/Simon-Game-main/index.html
+++ b/Simon-Game-main/index.html
@@ -30,7 +30,9 @@
       <div type="button" id="blue" class="btn blue">
 
       </div>
-
+      <div type="button" id="grey" class="btn grey"> 
+        
+      </div> 
     </div>
 
   </div>
